# libfwnt

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libfwnt-wiki.ini  libfwnt.ini  libfwnt.pc.in  libfwnt.spec.in  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  tox.ini
.github/workflows/: build_ossfuzz.yml
.travis/: before_install.sh  runtests.sh  script.sh
common/: types.h.in  wide_string.h
documentation/: Compression methods.asciidoc  Language Code identifiers.asciidoc  Security Descriptor.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libfwnt.h.in
include/libfwnt/: definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfwnt/: Makefile.am  libfwnt.c  libfwnt.rc.in  libfwnt_access_control_entry.c  libfwnt_access_control_entry.h  libfwnt_access_control_list.c  libfwnt_access_control_list.h  libfwnt_bit_stream.c  libfwnt_bit_stream.h  libfwnt_debug.c  libfwnt_debug.h  libfwnt_definitions.h.in  libfwnt_error.c  libfwnt_error.h  libfwnt_extern.h  libfwnt_huffman_tree.c  libfwnt_huffman_tree.h  libfwnt_libcdata.h  libfwnt_libcerror.h  libfwnt_libcnotify.h  libfwnt_libcstring.h  libfwnt_locale_identifier.c  libfwnt_locale_identifier.h  libfwnt_lznt1.c  libfwnt_lznt1.h  libfwnt_lzx.c  libfwnt_lzx.h  libfwnt_lzxpress.c  libfwnt_lzxpress.h  libfwnt_notify.c  libfwnt_notify.h  libfwnt_security_descriptor.c  libfwnt_security_descriptor.h  libfwnt_security_identifier.c  libfwnt_security_identifier.h  libfwnt_support.c  libfwnt_support.h  libfwnt_types.h  libfwnt_unused.h
manuals/: Makefile.am  libfwnt.3
msvscpp/: Makefile.am  libfwnt.sln
msvscpp/fwnt_test_access_control_entry/: fwnt_test_access_control_entry.vcproj
msvscpp/fwnt_test_access_control_list/: fwnt_test_access_control_list.vcproj
msvscpp/fwnt_test_bit_stream/: fwnt_test_bit_stream.vcproj
msvscpp/fwnt_test_error/: fwnt_test_error.vcproj
msvscpp/fwnt_test_get_version/: fwnt_test_get_version.vcproj
msvscpp/fwnt_test_huffman_tree/: fwnt_test_huffman_tree.vcproj
msvscpp/fwnt_test_lznt1/: fwnt_test_lznt1.vcproj
msvscpp/fwnt_test_lznt1_decompress/: fwnt_test_lznt1_decompress.vcproj
msvscpp/fwnt_test_lzx/: fwnt_test_lzx.vcproj
msvscpp/fwnt_test_lzxpress/: fwnt_test_lzxpress.vcproj
msvscpp/fwnt_test_lzxpress_decompress/: fwnt_test_lzxpress_decompress.vcproj
msvscpp/fwnt_test_lzxpress_huffman_decompress/: fwnt_test_lzxpress_huffman_decompress.vcproj
msvscpp/fwnt_test_notify/: fwnt_test_notify.vcproj
msvscpp/fwnt_test_security_descriptor/: fwnt_test_security_descriptor.vcproj
msvscpp/fwnt_test_security_identifier/: fwnt_test_security_identifier.vcproj
msvscpp/fwnt_test_security_identifier_copy_from/: fwnt_test_security_identifier_copy_from.vcproj
msvscpp/fwnt_test_security_identifier_to_string/: fwnt_test_security_identifier_to_string.vcproj
msvscpp/fwnt_test_support/: fwnt_test_support.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfwnt/: libfwnt.vcproj
msvscpp/libfwnt_dll/: libfwnt_dll.vcproj
msvscpp/libuna/: libuna.vcproj
msvscpp/pyfwnt/: pyfwnt.vcproj
ossfuzz/: Makefile.am  lznt1_fuzzer.c  lznt1_fuzzer.cc  lzx_fuzzer.c  lzx_fuzzer.cc  lzxpress_fuzzer.c  lzxpress_fuzzer.cc  lzxpress_huffman_fuzzer.c  lzxpress_huffman_fuzzer.cc  ossfuzz_libfwnt.h  security_descriptor_fuzzer.c  security_descriptor_fuzzer.cc  security_identifier_fuzzer.c  security_identifier_fuzzer.cc
pyfwnt/: Makefile.am  pyfwnt.c  pyfwnt.h  pyfwnt_access_control_entries.c  pyfwnt_access_control_entries.h  pyfwnt_access_control_entry.c  pyfwnt_access_control_entry.h  pyfwnt_access_control_list.c  pyfwnt_access_control_list.h  pyfwnt_access_control_types.c  pyfwnt_access_control_types.h  pyfwnt_error.c  pyfwnt_error.h  pyfwnt_integer.c  pyfwnt_integer.h  pyfwnt_libcerror.h  pyfwnt_libcstring.h  pyfwnt_libfwnt.h  pyfwnt_lznt1.c  pyfwnt_lznt1.h  pyfwnt_lzx.c  pyfwnt_lzx.h  pyfwnt_lzxpress.c  pyfwnt_lzxpress.h  pyfwnt_python.h  pyfwnt_security_descriptor.c  pyfwnt_security_descriptor.h  pyfwnt_security_identifier.c  pyfwnt_security_identifier.h  pyfwnt_unused.h
pyfwnt-python2/: Makefile.am
pyfwnt-python3/: Makefile.am
tests/: Makefile.am  fwnt_test_access_control_entry.c  fwnt_test_access_control_list.c  fwnt_test_bit_stream.c  fwnt_test_error.c  fwnt_test_get_version.c  fwnt_test_huffman_tree.c  fwnt_test_libcerror.h  fwnt_test_libcfile.h  fwnt_test_libcnotify.h  fwnt_test_libcstring.h  fwnt_test_libfwnt.h  fwnt_test_lznt1.c  fwnt_test_lznt1_decompress.c  fwnt_test_lzx.c  fwnt_test_lzxpress.c  fwnt_test_lzxpress_decompress.c  fwnt_test_lzxpress_huffman_decompress.c  fwnt_test_macros.h  fwnt_test_memory.c  fwnt_test_memory.h  fwnt_test_notify.c  fwnt_test_security_descriptor.c  fwnt_test_security_identifier.c  fwnt_test_security_identifier_copy_from.c  fwnt_test_security_identifier_to_string.c  fwnt_test_support.c  fwnt_test_unused.h  pkgbuild.sh  pyfwnt_test_access_control_entry.py  pyfwnt_test_access_control_list.py  pyfwnt_test_get_version.py  pyfwnt_test_lznt1.py  pyfwnt_test_lzx.py  pyfwnt_test_lzxpress.py  pyfwnt_test_security_descriptor.py  pyfwnt_test_security_identifier.py  pyfwnt_test_support.py  runtests.py  runtests.sh  (+11 more)
tests/data/: access_control_entry.1  access_control_list.1  bit_stream.1  lznt1.1  lzx.1  lzx.2  lzxpress_huffman.3  lzxpress_huffman.4  lzxpress_huffman.5  security_descriptor.1  security_identifier.1
