include_HEADERS = \
	libfwnt.h

pkginclude_HEADERS = \
	libfwnt/definitions.h \
	libfwnt/error.h \
	libfwnt/extern.h \
	libfwnt/features.h \
	libfwnt/types.h

EXTRA_DIST = \
	libfwnt.h.in \
	libfwnt/definitions.h.in \
	libfwnt/features.h.in \
	libfwnt/types.h.in

DISTCLEANFILES = \
	libfwnt.h \
	libfwnt/definitions.h \
	libfwnt/features.h \
	libfwnt/types.h \
	Makefile \
	Makefile.in

