MSVSCPP_FILES = \
	fwnt_test_error/fwnt_test_error.vcproj \
	fwnt_test_lznt1_decompress/fwnt_test_lznt1_decompress.vcproj \
	fwnt_test_lzxpress_decompress/fwnt_test_lzxpress_decompress.vcproj \
	fwnt_test_lzxpress_huffman_decompress/fwnt_test_lzxpress_huffman_decompress.vcproj \
	fwnt_test_security_identifier_copy_from/fwnt_test_security_identifier_copy_from.vcproj \
	fwnt_test_security_identifier_to_string/fwnt_test_security_identifier_to_string.vcproj \
	fwnt_test_support/fwnt_test_support.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcstring/libcstring.vcproj \
	libcthreads/libcthreads.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	pyfwnt/pyfwnt.vcproj \
	libfwnt.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

