MSVSCPP_FILES = \
	fwnt_test_access_control_entry/fwnt_test_access_control_entry.vcproj \
	fwnt_test_access_control_list/fwnt_test_access_control_list.vcproj \
	fwnt_test_bit_stream/fwnt_test_bit_stream.vcproj \
	fwnt_test_error/fwnt_test_error.vcproj \
	fwnt_test_huffman_tree/fwnt_test_huffman_tree.vcproj \
	fwnt_test_lznt1/fwnt_test_lznt1.vcproj \
	fwnt_test_lzx/fwnt_test_lzx.vcproj \
	fwnt_test_lzxpress/fwnt_test_lzxpress.vcproj \
	fwnt_test_notify/fwnt_test_notify.vcproj \
	fwnt_test_security_descriptor/fwnt_test_security_descriptor.vcproj \
	fwnt_test_security_identifier/fwnt_test_security_identifier.vcproj \
	fwnt_test_support/fwnt_test_support.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libfwnt/libfwnt.vcproj \
	pyfwnt/pyfwnt.vcproj \
	libfwnt.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

